# ACF

./: .gitignore  Autonomous Content Factory.docx  README.md  launch.sh  main.py  pyproject.toml  requirements.txt  start.sh
campaigns/: agents.py  consumers.py  models.py  routing.py  tasks.py  urls.py  utils.py  views.py
campaigns/migrations/: 0001_initial.py
campaigns/templates/campaigns/: create.html  dashboard.html  review.html
config/: asgi.py  settings.py  urls.py
config/templates/: base.html
docs/: README.md  ai_agents.md  architecture.md  celery_tasks.md  data_models.md  websockets_channels.md
tasks/: prd-autonomous-content-factory.md  tasks-autonomous-content-factory.md
tests/: test_input_1_smart_coffee.txt  test_input_2_dog_food.txt  test_input_3_ecocharge_product_sheet.txt  test_input_4_study_app.txt  test_input_5_office_chair.txt
